--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -15,6 +15,7 @@
   --ifm-color-primary-lightest: #82a2f3;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-svg: 	white;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,4 +28,12 @@
   --ifm-color-primary-lighter: #5884ef;
   --ifm-color-primary-lightest: #82a2f3;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-svg: 	black;
+}
+
+.svgLinks {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
